--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,4 +28,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # 5. Commit: git commit -m "Initial commit"
 
 # 6. Push to GitHub: git push -u origin main
-
+#Addding directly on github
