--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,13 +14,51 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-#push to github
-# 1. Initialize if not already done :  git init
-# 2. Add remote (replace link with your actual repo URL) :
-# git remote add origin https://github.com/<your-username>/<your-repo>.git
+
+
+
+
+
+
+
+
+
+
+#--------First time push project from local to github---------------------
+# 1. Initialize a new git repo if not already done :  'git init'
+
+# 2. Add remote (replace link with your actual repo URL) :  adds the remote. If already added, it will fail.
+# 'git remote add origin https://github.com/<your-username>/<your-repo>.git'
+
 # 3. Remove .gitignore from the repository (optional if you want it gone) :
-# git rm --cached .gitignore
-# 4. Stage all other files :  git add .
+# 'git rm --cached .gitignore'   Only do this if you want to remove .gitignore from tracking. Normally, you do not remove .gitignore. If your goal is to make Git respect .gitignore, skip this step.
+
+
+# 4. Stage all other files :  'git add . (to push all files)'  or 'git add filename1,filename2 (to push specific file name)'
+
 # 5. Commit: git commit -m "Initial commit"
+
 # 6. Push to GitHub: git push -u origin main
-#Addding directly on github
+
+
+#---------Next time update project: run these commands only:---------------
+#git add . : (To add all files)l
+#git add file name :  Adds specific file. (No comma between filenames.
+#git commit -m "changes description" 
+#git pull   :Pulls remote changes before pushing to avoid conflicts.
+#git push   : Pushes our local commits.
+#if changed some files directly on github- then also run 'git pull' 
+#If someone makes changes directly on GitHub, you must git pull first to merge those changes locally, then git push.
+
+
+
+
+
+
+
+
+
+
+
+
+
