adding some properties for github

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,17 +42,19 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
 #---------Next time update project: run these commands only:---------------
-#git add . : (To add all files)l
-#git add file name :  Adds specific file. (No comma between filenames.
-#git commit -m "changes description" 
-#git pull   :Pulls remote changes before pushing to avoid conflicts.
-#git push   : Pushes our local commits.
+# 1. git add . : (To add all files)l
+# 2. git add file name :  Adds specific file. (No comma between filenames.
+# 3. git commit -m "changes description" 
+# 4. git pull   :Pulls remote changes before pushing to avoid conflicts.
+# 5. git push   : Pushes our local commits.
 #if changed some files directly on github- then also run 'git pull' 
 #If someone makes changes directly on GitHub, you must git pull first to merge those changes locally, then git push.
 
 
-
-
+#-------Remove already pushed .gitignore file from github-------
+# 1. git rm --cached .gitignore
+# 2. git commit -m "Remove .gitignore from tracking"
+# 3. git push
 
 
 
